# tightbeam

./: Cargo.toml  Dockerfile.daemon  Dockerfile.runtime  IMPLEMENTATION_PLAN.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml  scorecard.yml
crates/tightbeam-daemon/: Cargo.toml
crates/tightbeam-daemon/src/: config.rs  conversation.rs  init.rs  lib.rs  lifecycle.rs  main.rs  mcp.rs  paths.rs  profile.rs  protocol.rs  registration.rs  streaming.rs
crates/tightbeam-daemon/src/provider/: claude.rs  mod.rs
crates/tightbeam-daemon/tests/: integration.rs
crates/tightbeam-protocol/: Cargo.toml
crates/tightbeam-protocol/src/: framing.rs  lib.rs
crates/tightbeam-providers/: Cargo.toml
crates/tightbeam-providers/src/: claude.rs  lib.rs
crates/tightbeam-runtime/: Cargo.toml
crates/tightbeam-runtime/src/: agent.rs  config.rs  connection.rs  main.rs  prompt.rs  tools.rs
crates/tightbeam-shim/: Cargo.toml
crates/tightbeam-shim/src/: main.rs
docs/: index.html
