[package]
name = "tightbeam-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.13", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
tightbeam-protocol = { path = "../tightbeam-protocol" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
