[package]
name = "tightbeam-daemon"
version = "0.2.0"
edition = "2021"

[dependencies]
base64 = "0.22"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tightbeam-protocol = { path = "../tightbeam-protocol" }
tightbeam-providers = { path = "../tightbeam-providers" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true

[dev-dependencies]
async-trait = "0.1"
tempfile = "3"
tightbeam-providers = { path = "../tightbeam-providers" }
