[package]
name = "tightbeam-providers"
version = "0.5.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tightbeam-protocol = { path = "../tightbeam-protocol" }

[lints]
workspace = true
