[package]
name = "tightbeam-runtime"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "tightbeam"
path = "src/main.rs"

[dependencies]
tightbeam-protocol = { path = "../tightbeam-protocol" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
